--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -8,6 +8,13 @@
 </head>
 <body>
     <h1>Hello User! Welcome to the User App</h1>
+    <nav>
+        <ul>
+            <li>
+                <a href = "/users/new"> Sign Up</a>
+            </li>
+        </ul>
+    </nav>
 
     <%- body %>
 </body>
