--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -7,15 +7,20 @@
     <title> User App </title>
 </head>
 <body>
-    <h1>Hello User! Welcome to the User App</h1>
     <nav>
         <ul>
             <li>
                 <a href = "/users/new"> Sign Up</a>
             </li>
+            <li>
+                <a href = "/users/login"> Log In</a>
+            </li>
+            <li>
+                <a href = "/users/logout"> Log Out</a>
+            </li>
         </ul>
     </nav>
-
+    <h1>Hello User! Welcome to the User App</h1>
     <%- body %>
 </body>
 </html>
