--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -9,17 +9,30 @@
 <body>
     <nav>
         <ul>
-            <li>
-                <a href = "/users/new"> Sign Up</a>
-            </li>
-            <li>
+            <!-- if user is logged in -->
+            <% if (user){ %>
+                <li>
+                    <a href = "/users/profile"> Profile</a>
+                </li>
+
+                <li>
+                    <a href = "/users/logout"> Log Out</a>
+                </li>
+
+                <% } else { %>
+                <!-- // ifuser logged out -->
+                <li>
+                    <a href = "/users/new"> Sign Up</a>
+                </li>
+
+                 <li>
                 <a href = "/users/login"> Log In</a>
             </li>
-            <li>
-                <a href = "/users/logout"> Log Out</a>
-            </li>
+            <% } %>
+           
         </ul>
     </nav>
+
     <h1>Hello User! Welcome to the User App</h1>
     <%- body %>
 </body>
